--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -8,7 +8,7 @@
  \begin{minipage}{12cm}
   \emph{"`Nichts anderes in der Natur hat eine herrlichere Struktur als der Körper der Wirbeltiere."'}
  
-  --- "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Vergleichende_Anatomie}, S.\ 1
+  --- "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite[S.\ 1]{Vergleichende_Anatomie}
  \end{minipage}
 \end{center}
 
@@ -16,15 +16,16 @@ Dieses Kapitel soll einen Überblick über die biologische Beschaffenheit der Wi
 
 % Definition
 Wirbeltiere, oder auch Vertebrata, sind Tiere mit einer skelettartigen Schädelkapsel, einem Cranium. Deshalb werden sie auch Schädeltiere oder Craniota genannt.\\
-Auf den ersten Blick ist diese Definition etwas überraschend, da als  Haupteigenschaft nicht die Wirbelsäule, sondern der Schädel genannt wird. Das liegt daran, dass zu den Wirbeltieren auch einige Tiere gezählt werden, die gar keine Wirbelsäule sondern "`nur"' eine Chorda dorsalis besitzen. Die Chorda dorsalis besteht aus weichem Gewebe, nicht aus Knochen. Sie ist das Achsenskelett der Chordatiere, einem Tierstamm, zu dem auch die Wirbeltiere gehören. (\cite{Vergleichende_Anatomie}, S.27 f.)\\
+Auf den ersten Blick ist diese Definition etwas überraschend, da als  Haupteigenschaft nicht die Wirbelsäule, sondern der Schädel genannt wird. Das liegt daran, dass zu den Wirbeltieren auch einige Tiere gezählt werden, die gar keine Wirbelsäule sondern "`nur"' eine Chorda dorsalis besitzen. Die Chorda dorsalis besteht aus weichem Gewebe, nicht aus Knochen. Sie ist das Achsenskelett der Chordatiere, einem Tierstamm, zu dem auch die Wirbeltiere gehören. \cite[S.\ 27 f.]{Vergleichende_Anatomie}\\
 Hier in dieser Arbeit soll es aber nur um Wirbeltiere mit Wirbelsäule gehen.
 
 % 5 Klassen
-Es gibt fünf große Gruppen von Wirbeltieren. Die historisch ersten Wirbeltiere sind die Fische. Danach entwickelten sich die Tetrapoden, Wirbeltiere mit vier Gliedmaßen, zu denen alle anderen Gruppen gehören. Zunächst entstanden die Amphibien, die noch nicht vollkommen terrestrisch leben. Daraus entwickelten sich die Reptilien, die erste Klasse der Wirbeltiere, die alle Strukturen besitzt um vollkommen an Land zu leben. (Es gibt aber auch Reptilien die trotzdem wieder im Wasser leben.) Außerdem gibt es noch die Vögel, die sich auf das Fliegen spezialisiert haben, und die Säugetiere, die ihre Jungen säugen. (\cite{Vergleichende_Anatomie}, Kapitel 4)
+Es gibt fünf große Gruppen von Wirbeltieren. Die historisch ersten Wirbeltiere sind die Fische. Danach entwickelten sich die Tetrapoden, Wirbeltiere mit vier Gliedmaßen, zu denen alle anderen Gruppen gehören. Zunächst entstanden die Amphibien, die noch nicht vollkommen terrestrisch leben. Daraus entwickelten sich die Reptilien, die erste Klasse der Wirbeltiere, die alle Strukturen besitzt um vollkommen an Land zu leben. (Es gibt aber auch Reptilien die trotzdem wieder im Wasser leben.) Außerdem gibt es noch die Vögel, die sich auf das Fliegen spezialisiert haben, und die Säugetiere, die ihre Jungen säugen. \cite[Kapitel 4]{Vergleichende_Anatomie}
 
 Auch der Mensch ist ein Säugetier und besitzt eine Wirbelsäule. Da sich Wirbeltiere, vor allem in ihrem Skelett, sehr ähneln, lassen sich viele der im folgenden Abschnitt aufgeführten Eigenschaften des Skeletts, vermutlich leicht "`am eigenen Leib"' nachvollziehen.
 
 
+\newpage
 %------------------------------------
 \section{Das Skelett}
 \label{biology_skeleton}
@@ -33,31 +34,32 @@ Auch der Mensch ist ein Säugetier und besitzt eine Wirbelsäule. Da sich Wirbel
 \begin{center}
  \begin{minipage}{12cm}
   \emph{"`Das innere, gelenkige Skelettsystem der Vertebraten ist einzigartig im Tierreich. Es ist das wichtigste aller Organsysteme für das Studium der Wirbeltiermorphologie."'}
-  --- \cite{Vergleichende_Anatomie}, S.\ 131
+  --- \cite[S.\ 131]{Vergleichende_Anatomie}
  \end{minipage}
 \end{center}
 
 
-Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (\cite{Vergleichende_Anatomie}, S.27). Das bedeutet, dass ihre linke Körperseite symmetrisch zur rechten ist. 
+Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch \cite[S.\ 27]{Vergleichende_Anatomie}. Das bedeutet, dass ihre linke Körperseite symmetrisch zur rechten ist. 
 
-% Wirbelsäule
-Die \emph{Wirbelsäule} ist je nach Lebensweise des entsprechenden Wirbeltiers aufgebaut. Ein wesentlicher Einflussfaktor auf Form und Aufbau sind die Kräfte, die auf sie wirken. 
+\paragraph{Wirbelsäule}
+Der Aufbau und die Form der Wirbelsäule hängt von der Lebensweise des entsprechenden Wirbeltiers ab. Ein wesentlicher Einflussfaktor sind die Kräfte, die auf sie wirken. 
 Bei Fischen muss die Wirbelsäule dem Druck der starken Axialmuskeln, die seitlich am Körper entlang führen, entgegenwirken.
 Bei Tetrapoden sind diese Axialmuskeln zurückgebildet, dafür muss die Wirbelsäule aber der Schwerkraft widerstehen.
-Und bei Vögeln ist die Wirbelsäule speziell an den Flug angepasst und deshalb \ua besonders leicht. (\cite{Vergleichende_Anatomie}, Abschnitt 9.2, S.\ 168 ff.)
+Und bei Vögeln ist die Wirbelsäule speziell an den Flug angepasst und deshalb \ua besonders leicht. \cite[\mbox{Abschnitt 9.2}, S.\ 168 ff.]{Vergleichende_Anatomie}
 
 % Wirbelanzahl
 Auch die Anzahl der Wirbel unterscheidet sich teilweise erheblich. 
-Die Halswirbelsäule ist \zb bei den Fischen noch gar nicht herausgebildet. Amphibien haben einen Wirbel, der für die Beweglichkeit des Kopfes zuständig ist. Bei Reptilien ist die Halsregion meist schon stärker abgesetzt. Säugetiere haben, bis auf wenige Ausnahmen, genau $7$ Halswirbel, egal wie lang der Hals ist. Vögel haben die meisten Halswirbel, nämlich $10$ bis maximal $31$ beim Trauerschwan \cite{WikipediaVogelskelett}, meistens aber zwischen $15$ und $20$. (siehe auch \cite{Vergleichende_Anatomie}, Abschnitt 9.2)
+Die Halswirbelsäule ist \zb bei den Fischen noch gar nicht herausgebildet. Amphibien haben einen Wirbel, der für die Beweglichkeit des Kopfes zuständig ist. Bei Reptilien ist die Halsregion meist schon stärker abgesetzt. Säugetiere haben, bis auf wenige Ausnahmen, genau $7$ Halswirbel, egal wie lang der Hals ist. Vögel haben die meisten Halswirbel, nämlich $10$ bis maximal $31$ beim Trauerschwan \cite{WikipediaVogelskelett}, meistens aber zwischen $15$ und $20$. \cite[Abschnitt 9.2]{Vergleichende_Anatomie}
 
 Ebenso unterscheidet sich die Anzahl der Wirbel in anderen Teilen der Wirbelsäule. Teilweise sind Wirbel sogar miteinander zu einem größeren Knochen verwachsen. Betrachtet man nur die Gruppe der Säugetiere, so kommt man auf etwa $12$ bis $14$ Brustwirbel, $5$ bis $7$ Lendenwirbel, $3$ bis $5$ Kreuzwirbel und $4$ bis $22$ Schwanzwirbel \cite{AnatomieKuenstler}.
 
 % Wirbelform
-Auch die Form der einzelnen Wirbel unterscheidet sich sowohl zwischen den verschiedenen Tieren als auch entlang der Wirbelsäule einer einzelnen Art (\cite{Vergleichende_Anatomie}, Abschnitt 9.1 und Abbildung 9.2). Diese Vielfalt in ein Regelwerk zu zwängen, um sie automatisch generieren zu können, erscheint aussichtslos. Deshalb wird hier mit einem Platzhaltern gearbeitet, der für alle Arten von Wirbeln steht.
+Auch die Form der einzelnen Wirbel unterscheidet sich sowohl zwischen den verschiedenen Tieren als auch entlang der Wirbelsäule einer einzelnen Art \cite[Abschnitt 9.1 und \mbox{Abbildung 9.2}]{Vergleichende_Anatomie}. 
+Um diese Vielfalt zu abstrahieren wird hier mit Platzhaltern gearbeitet, die für alle Arten von Wirbeln stehen. Falls später eine genauere Unterscheidung nötig sein sollte, können diese leicht spezialisiert werden.
 
-% Extremitäten
-Die \emph{Extremitäten} der Tetrapoden sind nach einem "`Grundbauplan"' aufgebaut (siehe Abbildung \ref{extremities}a). Dieser wird jedoch vielfach abgewandelt. Einige Beispiele sind in Abbildung \ref{extremities}b zu sehen. (\cite{AllgemeineZoologie}, S.\ 487)\\
-Bei Fischen haben die Extremitäten keine Verbindung zur Wirbelsäule. Erst Amphibien bilden Schulter- und Beckengürtel aus, da sie zur Fortbewegung an Land nötig sind. (\cite{Vergleichende_Anatomie}, Abschnitt 9.2.3)
+\paragraph{Extremitäten}
+Die Extremitäten der Tetrapoden sind nach einem "`Grundbauplan"' aufgebaut (siehe Abbildung \ref{extremities}a). Dieser wird jedoch vielfach abgewandelt. Einige Beispiele sind in Abbildung \ref{extremities}b zu sehen. \cite[S.\ 487]{AllgemeineZoologie}\\
+Bei Fischen haben die Extremitäten keine Verbindung zur Wirbelsäule. Erst Amphibien bilden Schulter- und Beckengürtel aus, da sie zur Fortbewegung an Land nötig sind. \cite[Abschnitt 9.2.3]{Vergleichende_Anatomie}
 Der Einfachheit halber wird hier aber nicht weiter beachtet ob eine Verbindung zur Wirbelsäule besteht, oder nicht. 
 
  \begin{figure}
@@ -66,15 +68,16 @@ Der Einfachheit halber wird hier aber nicht weiter beachtet ob eine Verbindung z
   \subfloat[Beispiele]{\includegraphics[height=0.35\textheight]{graphics/ExtremitaetenBeispiele2.pdf}} \label{bsp_extremitaeten}
   
   \caption{Extremitäten von Tetrapoden, Oberarm rot, Speiche dunkelblau, Elle hellblau, Handwurzelknochen grün, Mittelhandknochen gelb, Finderknochen braun\\
-  (a) Grundbauplan (\cite{AllgemeineZoologie} S.\ 487, vereinfacht und eingefärbt),\\
-  (b) Beispiele für Vordergliedmaßen von Mensch (1), Eidechse (2), Wal (3), Maulwurf (4), Pinguin (5), Pferd (6), Flugsaurier (7), Vogel (8) und Fledermaus (9). \mbox{(\cite{dtvBiologie}, S.\ 474)}}
+  (a) Grundbauplan \cite[S.\ 487, vereinfacht und eingefärbt]{AllgemeineZoologie},\\
+  (b) Beispiele für Vordergliedmaßen von Mensch (1), Eidechse (2), Wal (3), Maulwurf (4), Pinguin (5), Pferd (6), Flugsaurier (7), Vogel (8) und Fledermaus (9). \mbox{\cite[S.\ 474]{dtvBiologie}}}
   \label{extremities}
  \end{figure}
 
 % Extremitätengürtel
-Schulter- und Beckengürtel bestehen  jeweils aus mehreren Knochen, die je nach Art mehr oder weniger ausgebildet, unterschiedlich geformt oder sogar komplett zurückgebildet sein können (siehe \cite{Vergleichende_Anatomie}, Absatz 9.7). Um das im Folgenden zu vereinfachen, wird jeder Extremitätengürtel durch einen Knochen repräsentiert. Der Schultergürtel wird durch ein Schulterblatt ersetzt und der Beckengürtel durch einen "`Beckenknochen"'.
+Schulter- und Beckengürtel bestehen  jeweils aus mehreren Knochen, die je nach Art mehr oder weniger ausgebildet, unterschiedlich geformt oder sogar komplett zurückgebildet sein können \cite[Absatz 9.7]{Vergleichende_Anatomie}. Um das im Folgenden zu vereinfachen, wird jeder Extremitätengürtel durch einen Knochen repräsentiert. Der Schultergürtel wird durch ein Schulterblatt ersetzt und der Beckengürtel durch einen "`Beckenknochen"'.
 
 % verallgemeinerter und abstrahierter Bauplan
+\paragraph{Abstraktion}
 Das Skelett von Wirbeltieren ist im Allgemeinen also ein kompliziertes Konstrukt aus vielen Einzelteilen, die zwischen verschiedenen Arten stark variieren. Um einen Algorithmus zu entwerfen, der Skeletten nachempfundene Gebilde konstruiert, ist es also notwendig ein erheblich vereinfachtes Modell zu erstellen.\\ 
 In Abbildung \ref{bauplan_skelett} ist ein verallgemeinerter und abstrahierter Bauplan für Wirbeltiere zu sehen. Er ist reduziert auf die Wirbelsäule, Rippen, Schädel, Extremitäten, Schulterblatt und Beckenknochen. Die Extremitäten bestehen jeweils aus Oberarm/-schenkel, Unterarm/-schenkel und Hand/Fuß. Hände und Füße werden hier jeweils als ein "`Knochen"' betrachtet, obwohl sie natürlich aus vielen Einzelteilen bestehen. Es kann maximal zwei Extremitätenpaare geben, jeweils einer an jedem Extremitätengürtel. Rippen, Hals- und Schwanzwirbelsäule sind optional und auch die Anzahl der Wirbel und Rippen variiert je nach Tier.
 
@@ -100,7 +103,7 @@ Das größte und schwerste Wirbeltier ist der Blauwal, er kann bis zu $120$ Tonn
 Wenn eine Tierart im Laufe der Evolution wächst, so ändert sich die Größe gleichmäßig. Dieses Wachstum ist aber begrenzt. Der Grund dafür ist, dass die Oberfläche nicht proportional mit dem Volumen mitwächst. Beispielsweise produziert ein Säugetier Wärme proportional zu seinem Volumen. Es kann aber nur Wärme proportional zu seiner Oberfläche abgeben. Dadurch haben große Säugetiere eher Probleme Wärme abzugeben und kleine warm zu bleiben.
 Ein ähnliches Problem tritt bei Knochen auf. Die Last, die ein Knochen tragen kann, ist ungefähr proportional zu seiner Querschnittsfläche. Das Skelett muss aber das komplette Gewicht des Körpers tragen, was wiederum proportional zum Volumen ist.
 % Lösungen für Skalierungen
-Aus diesem Grund müssten die Knochen großer Tiere eigentlich überproportional vergrößert sein. Das ist jedoch nicht unbedingt der Fall. Das Problem an dicken Knochen ist, dass sie den Bewegungsradius, \zb der Extremitäten, stark einschränken. Deshalb passen viele Tiere stattdessen ihre Körperhaltung und Aktivität an, um Spitzenkräfte, wie Stöße oder Oszillationen, auf ihre Knochen zu vermeiden. Deshalb wirken große Tiere auch eher "`behäbiger"' als kleine. (\cite{Vergleichende_Anatomie}, Kapitel 23)
+Aus diesem Grund müssten die Knochen großer Tiere eigentlich überproportional vergrößert sein. Das ist jedoch nicht unbedingt der Fall. Das Problem an dicken Knochen ist, dass sie den Bewegungsradius, \zb der Extremitäten, stark einschränken. Deshalb passen viele Tiere stattdessen ihre Körperhaltung und Aktivität an, um Spitzenkräfte, wie Stöße oder Oszillationen, auf ihre Knochen zu vermeiden. Deshalb wirken große Tiere auch eher "`behäbiger"' als kleine. \cite[Kapitel 23]{Vergleichende_Anatomie}
 
 Sehr große und sehr kleine Wirbeltiere können also nicht über einfaches Skalieren ineinander überführt werden. Dennoch ähneln sich ihre Skelette sehr.
 
