Small formulation change in biology chapter

--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -42,7 +42,7 @@ Auch der Mensch ist ein Säugetier und besitzt eine Wirbelsäule. Da sich Wirbel
 Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch \cite[S.\ 27]{Vergleichende_Anatomie}. Das bedeutet, dass ihre linke Körperseite symmetrisch zur rechten ist. 
 
 \paragraph{Wirbelsäule}
-Der Aufbau und die Form der Wirbelsäule hängt von der Lebensweise des entsprechenden Wirbeltiers ab. Ein wesentlicher Einflussfaktor sind die Kräfte, die auf sie wirken. 
+Aufbau und Form der Wirbelsäule hängen von der Lebensweise des entsprechenden Wirbeltiers ab. Ein wesentlicher Einflussfaktor sind die Kräfte, die auf die Wirbelsäule wirken. 
 Bei Fischen muss die Wirbelsäule dem Druck der starken Axialmuskeln, die seitlich am Körper entlang führen, entgegenwirken.
 Bei Tetrapoden sind diese Axialmuskeln zurückgebildet, dafür muss die Wirbelsäule aber der Schwerkraft widerstehen.
 Und bei Vögeln ist die Wirbelsäule speziell an den Flug angepasst und deshalb \ua besonders leicht. \cite[\mbox{Abschnitt 9.2}, S.\ 168 ff.]{Vergleichende_Anatomie}
