--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -84,7 +84,7 @@ In Abbildung \ref{bauplan_skelett} ist ein verallgemeinerter und abstrahierter B
 \begin{figure}
  \centering
  \includegraphics[width=\textwidth]{graphics/skeletonPlan}
- \caption{Verallgemeinerter und abstrahierter Bauplan eines Wirbeltierskeletts. Es sind maximal zwei Extremitätenpaare erlaubt, jeweils eines an jedem Extremitätengürtel. Rippen und Hals- und Schwanzwirbelsäule sind optional. Die Anzahl der Wirbel und Rippen variiert je nach Tier.}
+ \caption{Verallgemeinerter und abstrahierter Bauplan eines Wirbeltierskeletts. Es sind maximal zwei Extremitätenpaare erlaubt, jeweils eines an jedem Extremitätengürtel. Rippen und Hals- und Schwanzwirbelsäule sind optional. Die Anzahl der Wirbel und Rippen variiert je nach Tier. Oben rechts im Eck ist die Orientierung der Koordinatenachsen angegben.}
  \label{bauplan_skelett}
 \end{figure}
 
