--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -121,7 +121,7 @@ Hier sollen drei Beispiele hervorgehoben werden, die jeweils charakteristische M
 \emph{Zentauren} haben einen Pferdekörper, aber statt eines Halses setzt ein menschlicher Oberkörper auf dem Schultergürtel auf \cite{centaurs}. Sie haben also zwei Schultergürtel. 
 %\todo{Paper zu Mischwesen zitieren?}
 
-Der \emph{Pegasus} hat ebenfalls den Körper eines Pferdes, aber auch Flügel, die zusätzlich zu den Vorderbeinen am Schultergürtel ansetzen \cite{pegasus}. Es ist also "`möglich"' an einem Extremitätengürtel zwei Paare von Extremitäten ansetzen zu lassen.
+Der \emph{Pegasus} hat ebenfalls den Körper eines Pferdes, aber auch Flügel, die zusätzlich zu den Vorderbeinen am Schultergürtel ansetzen \cite{pegasus}. Es ist also "`möglich"' an einem Extremitätengürtel zwei Paare von Extremitäten ansetzen zu lassen. Ein anderes Tier mit sechs Extremitäten an zwei Extremitätengürteln ist das Schreckenspferd (oder auch Direhorse) aus dem Film "`Avatar"' \cite{direhorse}. Es besitzt vier Beine am Schultergürtel.
 
 \emph{Asiatische Drachen} haben einen langen, schlangenartigen Körper mit oft mehr als vier Beinen. Sie können als Inspiration für Tiere dienen, die mehr als nur zwei Extreimtätengürtel entlang des Rückens besitzen.
 
